touched up slides

--- a/prez.ipynb
+++ b/prez.ipynb
@@ -60,6 +60,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "blah blah"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -459,7 +472,7 @@
    "source": [
     "<a id=\"objectives\"></a>\n",
     "### Objectives\n",
-    "<b>1.</b> Make you aware of the specific, unique challenges involved with RL, so you can better appreciate why the approach includes the steps it does.\n",
+    "<b>1.</b> Make you aware of the specific, unique challenges involved with RL.\n",
     "\n",
     "<b>2.</b> Give you a snapshot of the (neo-)classic record linkage approach.\n",
     "\n",
@@ -470,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -550,14 +563,17 @@
    "source": [
     "This is <i>often</i> not the case for multiple reasons:\n",
     "1. Accurate record keeping is <i>hard</i>.\n",
-    "2. Privacy is usually a concern (in some countries use of such identifiers is illegal)."
+    "    - Mistakes and inaccuracies lead to undesired variation.\n",
+    "    \n",
+    "2. Privacy is usually a concern \n",
+    "    - In some countries use of such identifiers is illegal."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -581,7 +597,7 @@
     "## Privacy\n",
     "<a id=\"privacy\"></a>\n",
     "\n",
-    "In the event that these records contain sensitive personal information (such as medical/employment records), special attention must be paid to preserving this privacy via <i><b>'de-identification'</b></i>."
+    "In the event that these records contain sensitive <b>personal information</b> (such as medical/employment records), special attention must be paid to preserving this privacy via <i>'de-identification'</i>."
    ]
   },
   {
@@ -2928,7 +2944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
