--- a/prez.ipynb
+++ b/prez.ipynb
@@ -21,7 +21,7 @@
        "     font-size: 100%;\n",
        "}\n",
        "\n",
-       "</style>"
+       "</style>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -54,7 +54,7 @@
    },
    "source": [
     "<center><h1>Data deduplication with Python</h1></center>\n",
-    "<font color='grey'><center><h2>Applying modern tools to the 'classic' linkage approach.</h2></center></font>\n",
+    "<center><h2><font color='grey'>Applying modern tools to the 'classic' linkage approach.</font></h2></center>\n",
     "\n",
     "---\n"
    ]
@@ -95,7 +95,7 @@
    "source": [
     "<img align=\"right\" src=\"https://i.imgur.com/wr0gqAH.png\" width=\"300\" height=\"300\">\n",
     "\n",
-    "# Hi!\n",
+    "<center><h1><font color='green'>Hi!</font></h1></center>\n",
     "\n",
     "- I'm [Adam](https://www.adam-p-jones.com/).\n",
     "    - I'm a [data scientist](https://www.linkedin.com/in/adam-p-jones/) with an interest in complex problems in healthcare.\n",
@@ -2573,7 +2573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
