--- a/prez.ipynb
+++ b/prez.ipynb
@@ -2,35 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "\n",
-       ".rendered_html {\n",
-       "  font-size:1.00em;\n",
-       "}\n",
-       ".rendered_html table, .rendered_html th, .rendered_html tr, .rendered_html td {\n",
-       "     font-size: 100%;\n",
-       "}\n",
-       "\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%HTML\n",
     "<style>\n",
@@ -67,7 +45,7 @@
     }
    },
    "source": [
-    "Today, I'm going to talk about <b>[record linkage](https://en.wikipedia.org/wiki/Record_linkage) (RL)</b> - <i>the process of matching multiple records that correspond to the same entity.</i>"
+    "Today, I'm going to talk about <b>[<font color='blue'>record linkage</font>](https://en.wikipedia.org/wiki/Record_linkage) (RL)</b> - <i>the process of matching multiple records that correspond to the same entity.</i>"
    ]
   },
   {
@@ -78,10 +56,10 @@
     }
    },
    "source": [
-    "> #### Jupyter Notebook: [github.com/meccaLeccaHi/RL_pybay2020](https://github.com/meccaLeccaHi/RL_pybay2020)\n",
+    "> #### <font color='orange'>Jupyter Notebook:</font> [github.com/meccaLeccaHi/RL_pybay2020](https://github.com/meccaLeccaHi/RL_pybay2020)\n",
     "- I'll paste the link in the group chat -- <b>`clone` it</b> and <i>follow along!</i>\n",
     ">\n",
-    "> #### Slack: [#talk-data-deduplication-with-python](https://pybay2020.slack.com/archives/C018VEY8DKK)\n",
+    "> #### <font color='purple'>Slack:</font> [#talk-data-deduplication-with-python](https://pybay2020.slack.com/archives/C018VEY8DKK)\n",
     "> - Feel free to <b>ask questions</b> after the talk!"
    ]
   },
@@ -305,7 +283,7 @@
     "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/3/3d/Rembrandt_-_Moses_with_the_Ten_Commandments_-_Google_Art_Project.jpg\" alt=\"Early databases\" width=\"300\">\n",
     "</center>\n",
     "\n",
-    "<center><i>Possible early attempt to join two databases (Rembrandt, 1659).</i></center>"
+    "<center><i>Possible first attempt to join two databases (Rembrandt, 1659).</i></center>"
    ]
   },
   {
@@ -403,12 +381,13 @@
     }
    },
    "source": [
-    "<br></br>\n",
-    "\n",
-    "<img align=\"right\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/900-158_Ahnentafel_Herzog_Ludwig.jpg/1920px-900-158_Ahnentafel_Herzog_Ludwig.jpg\" alt=\"family tree\" width=\"400\">\n",
-    "\n",
     "#### Genealogy\n",
-    "> - <b><i>INTERESTING FACT:</i></b> More than 10% of men and women were named 'John' and 'Mary', respectively, in 19th-century England."
+    "\n",
+    "<center>\n",
+    "    <img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/900-158_Ahnentafel_Herzog_Ludwig.jpg/1920px-900-158_Ahnentafel_Herzog_Ludwig.jpg\" alt=\"family tree\" width=\"500\">\n",
+    "</center>\n",
+    "\n",
+    "> - <b><i>Interesting Fact:</i></b> More than 10% of men and women were named 'John' and 'Mary', respectively, in 19th-century England."
    ]
   },
   {
@@ -419,7 +398,7 @@
     }
    },
    "source": [
-    "- Examples like these make it obvious why RL is an invaluable tool for genealogical databases, which are now a billion-dollar industry.\n",
+    "- Issues like these make tools such as RL critical for genealogical databases, which are now a billion-dollar industry.\n",
     "- [FamilySearch](https://en.wikipedia.org/wiki/FamilySearch) (i.e. Church of LDS) have invested heavily in RL and have published several technical reports on the subject."
    ]
   },
@@ -431,6 +410,9 @@
     }
    },
    "source": [
+    "\n",
+    "<img align=\"right\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/Man-scratching-head.gif/247px-Man-scratching-head.gif\" alt=\"head scratch\" width=\"100\">\n",
+    "\n",
     "<a id=\"why\"></a>\n",
     "## Why do I care?"
    ]
@@ -455,7 +437,7 @@
     }
    },
    "source": [
-    "RL lets you <b>do <i>more</i></b> with your data.\n",
+    "RL lets you <b><i>do more</i></b> with your data.\n",
     "- RL can be used to enhance dimensions including <b>time, breadth,</b> or <b>depth</b> (of detail). \n",
     "- As a result, these tools play an important role in both <b>data warehousing</b> <i>and</i> <b>data mining</b>.\n",
     "    - We can not only improve the <i>quality</i> (and statistical power) of our data, \n",
@@ -582,7 +564,7 @@
    "source": [
     "As such, in order to match records across databases, we must use common attributes shared by both databases.\n",
     "- e.g. Name, address, phone number, age.\n",
-    "- <b>But</b>, the quality of data points such as these are <i>notoriously low</i> for reasons described earlier."
+    "- But, the quality of data points such as these are <i>notoriously low</i> for reasons described earlier."
    ]
   },
   {
@@ -674,7 +656,7 @@
     }
    },
    "source": [
-    "Next, we'll describe some solutions to several of these problems.\n",
+    "Next, we'll describe some <b>solutions</b> to several of these problems.\n",
     "- I'm going to introduce you to the <b><i>classic record linkage approach</i></b>."
    ]
   },
@@ -897,7 +879,7 @@
    },
    "source": [
     "- The <b>removal of columns</b> can also be detrimental to the accuracy of our linkage.\n",
-    "    - Even if there are many records missing a value, the records that do will still be able to use that information for matching."
+    "    - Even if there are many records missing a value, the records without missing values will still be able to use that information for matching."
    ]
   },
   {
@@ -1071,7 +1053,7 @@
     "---\n",
     "\n",
     "Now, we are ready to compare our records to look for a match.\n",
-    "- But, if we are dealing with typical databases containing, say, a million or more records -- clearly we are not capable of comparing one trillion record pairs in a <i>\"reasonable\"</i>* time span.\n",
+    "- But, if we are dealing with typical databases containing, say, a million or more records -- clearly we are not capable of comparing <i>one trillion</i> record pairs in a <i>\"reasonable\"</i>* time span.\n",
     "\n",
     "<br></br>\n",
     "<div style=\"text-align: right\">*Ideally, we're talking minutes to hours, not days or weeks.</div>"
@@ -1149,7 +1131,17 @@
     }
    },
    "source": [
-    "<b><i>Blocking</i></b>, is a similar approach to indexing, which relies on a small number of such features to reduce the number of comparisons.\n",
+    "<b><i>Blocking</i></b>, is a similar approach to indexing, which relies on a small number of such features to reduce the number of comparisons."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "- In the previous example, <i>we would only have two blocks</i> (one for 'male' and one for 'female') for each database -- not ideal.\n",
     "- 'zip code' and phonetically-encoded 'surname' are <i>much</i> better candidates for use as <i>blocking keys</i>.\n",
     "- For greater improvements in performance, it is also common to block using <i>multiple</i> variables, in succession."
@@ -1159,7 +1151,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1586,7 +1578,7 @@
    },
    "source": [
     "<a id=\"classification\"></a>\n",
-    "<font color='#CC3333'><h2>Classification</h2></font>\n",
+    "<h2><font color='#CC3333'>Classification</font></h2>\n",
     "\n",
     "---"
    ]
@@ -2539,8 +2531,8 @@
    },
    "source": [
     "<center>\n",
-    "    <h2>Big thanks to <i>Grace, Luiz, Karen, et al.</i></h2>\n",
-    "    <h3>Another excellent year!</h3>\n",
+    "    <h2><font color='blue'>Big thanks to <i>Grace, Luiz, Karen, et al.</i></font></h2>\n",
+    "    <h3><font color='orange'>Another excellent year!</font></h3>\n",
     "</center>"
    ]
   },
@@ -2552,7 +2544,7 @@
     }
    },
    "source": [
-    "> ### <i>Hit me up in [#talk-data-deduplication-with-python](https://pybay2020.slack.com/archives/C018VEY8DKK)!</i>\n"
+    "> ### <i>HMU in [#talk-data-deduplication-with-python](https://pybay2020.slack.com/archives/C018VEY8DKK)!</i>\n"
    ]
   }
  ],
@@ -2573,7 +2565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
