--- a/prez.ipynb
+++ b/prez.ipynb
@@ -2,13 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "\n",
+       ".rendered_html {\n",
+       "  font-size:1.00em;\n",
+       "}\n",
+       ".rendered_html table, .rendered_html th, .rendered_html tr, .rendered_html td {\n",
+       "     font-size: 100%;\n",
+       "}\n",
+       "\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%HTML\n",
     "<style>\n",
@@ -2565,7 +2587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
