--- a/prez.ipynb
+++ b/prez.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "<img align=\"right\" src=\"https://i.imgur.com/wr0gqAH.png\" width=\"300\" height=\"300\">\n",
     "\n",
-    "<center><h1><font color='green'>Hi!</font></h1></center>\n",
+    "<center><h1><font color='green'>Hello.</font></h1></center>\n",
     "\n",
     "- I'm [Adam](https://www.adam-p-jones.com/).\n",
     "    - I'm a [data scientist](https://www.linkedin.com/in/adam-p-jones/) with an interest in complex problems in healthcare.\n",
