--- a/prez.ipynb
+++ b/prez.ipynb
@@ -1157,7 +1157,7 @@
    "source": [
     "<img align=\"right\" src=\"assets/warning.png\" width=\"200\">\n",
     "\n",
-    "> <b>Warning!</b>: This approach does, however, sometimes miss certain matches that may, for example, contain a typo in one of the <i>blocking keys</i>.\n",
+    "> <font color='red'><i><b>Warning!</b></i></font>: This approach does, however, sometimes miss certain matches that may, for example, contain a typo in one of the <i>blocking keys</i>.\n",
     "> - In the example above, the record would not have any chance of being matched in the event that 'gender' changed or was entered incorrectly.\n",
     "> - This highlights the need for careful selection of blocking criteria."
    ]
