--- a/prez.ipynb
+++ b/prez.ipynb
@@ -1271,7 +1271,7 @@
    },
    "source": [
     "- Classification of each record pair into \"matches\" and \"non-matches\" can be performed using either a <b><i>deterministic</i></b> (rule-based) or <b><i>probabilistic</i></b> (model-based) approach.\n",
-    "    - We'll focus on using a probabilistic approach, in which comparisons between pairs are broken down into feature vectors summarizing their agreement along multiple dimensions.\n",
+    "    - We're focusing on using a probabilistic approach, in which comparisons between pairs are broken down into feature vectors summarizing their agreement along multiple dimensions.\n",
     "- With the <b><i>feature vector</i></b> generated during comparison, we can apply any one of hundreds of different classification models.\n",
     "    - Models are trained to predict whether records are \"matches\" or not."
    ]
@@ -1284,22 +1284,23 @@
     }
    },
    "source": [
-    "- Comparisons can range from simple numeric comparisons, like the difference between ages of each record, to more complex comparison functions, like 'fuzzy' string matching or distances between addresses. \n",
-    "- A few examples of such comparisons are shown below.\n",
-    "<center>\n",
-    "<img src=\"assets/record_comparison.png\" alt=\"Record comparison\" width=\"650\">\n",
-    "</center>"
+    "- Comparisons can range from simple numeric comparisons, like the difference between ages of each record, to more complex comparison functions, like 'fuzzy' string matching or distances between addresses. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
     "The result is a <b>comparison vector</b> for each record pair.\n",
+    "\n",
+    "<center>\n",
+    "<img src=\"assets/record_comparison.png\" alt=\"Record comparison\" width=\"650\">\n",
+    "</center>\n",
+    "\n",
     "- We used approximate comparisons for strings, [edit distance](https://en.wikipedia.org/wiki/Edit_distance) for numbers, and equivalence for Booleans.\n",
     "- This <i>feature vector</i> is what we use for classification.\n",
     "- Using those feature vectors, we can apply any available classification models (sklearn, statsmodels, tensorflow, etc.) to attempt to predict whether those records are \"matches\" or not."
@@ -2531,7 +2532,7 @@
    },
    "source": [
     "<center>\n",
-    "    <h2><font color='blue'>Big thanks to <i>Grace, Luiz, Karen, et al.</i></font></h2>\n",
+    "    <h2><font color='blue'>Big thanks to <i>Grace, Luiz, Karen, Eduardo, et al.</i></font></h2>\n",
     "    <h3><font color='orange'>Another excellent year!</font></h3>\n",
     "</center>"
    ]
