--- a/prez.ipynb
+++ b/prez.ipynb
@@ -1298,10 +1298,10 @@
     "The result is a <b>comparison vector</b> for each record pair.\n",
     "\n",
     "<center>\n",
-    "<img src=\"assets/record_comparison.png\" alt=\"Record comparison\" width=\"650\">\n",
+    "<img src=\"assets/record_comparison.png\" alt=\"Record comparison\" width=\"750\">\n",
     "</center>\n",
     "\n",
-    "- We used approximate comparisons for strings, [edit distance](https://en.wikipedia.org/wiki/Edit_distance) for numbers, and equivalence for Booleans.\n",
+    "- We used comparisons for strings, [edit distance](https://en.wikipedia.org/wiki/Edit_distance) for numbers, and equivalence for Booleans.\n",
     "- This <i>feature vector</i> is what we use for classification.\n",
     "- Using those feature vectors, we can apply any available classification models (sklearn, statsmodels, tensorflow, etc.) to attempt to predict whether those records are \"matches\" or not."
    ]
@@ -1427,8 +1427,8 @@
     }
    },
    "source": [
-    "<i>Typically</i>, we accomplish this by thresholding their difference (or percentage) relative to some cutoff ($d_{max}$).\n",
-    "- We linearly extrapolate anything below that to between 1.0 (perfect similarity) and 0.0 (total dissimilarity)."
+    "<i>Typically</i>, thresholding their difference (or percentage) relative to some cutoff ($d_{max}$).\n",
+    "- We extrapolate anything below that to between 1.0 (perfect similarity) and 0.0 (no similarity)."
    ]
   },
   {
@@ -1453,7 +1453,7 @@
     "- Maximum absolute difference ($d$)\n",
     "$$\n",
     "d = |n_1-n_2|\\\\\n",
-    "sim_{absolute\\_difference} = \\left\\{\n",
+    "sim_{d} = \\left\\{\n",
     "    \\begin{array}{l}\n",
     "      1.0-\\frac{d}{d_{max}} \\hspace{3mm} if d < d_{max} , \\\\\n",
     "      0.0  \\hspace{22mm}  else\n",
@@ -1486,7 +1486,7 @@
    },
    "source": [
     "$$\n",
-    "sim_{percentage\\_difference} = \\left\\{\n",
+    "sim_{pd} = \\left\\{\n",
     "    \\begin{array}{l}\n",
     "      1.0-(\\frac{pd}{pd_{max}}) \\hspace{3mm} if pd < pd_{max} , \\\\\n",
     "      0.0  \\hspace{22mm}  else\n",
@@ -1549,7 +1549,7 @@
     "\n",
     "<a id=\"space\"></a>\n",
     "### Space\n",
-    "As geocoding resources are becoming increasingly popular and available, it's worth mentioning that they can be employed in RL, as well.\n",
+    "As resources are becoming increasingly popular and available, it's worth mentioning that <b><i>geocoding</i></b> can be employed in RL, as well.\n",
     "- Rather than simply comparing the 'address', we can actually calculate the distance (latitude and longitude) between points on Earth.\n",
     "- The major bottleneck to this process, is the <i>quality of address information</i> that is available to use for geocoding.\n",
     "- If any address details are missing or erroneous, then the location data provided may be imprecise or incorrect."
@@ -1631,7 +1631,7 @@
     }
    },
    "source": [
-    "- <i>Higher</i> accuracy can often be achieved using other machine learning techniques, such as a single-layer [perceptron](https://en.wikipedia.org/wiki/Perceptron), which <b><i>does not</i></b> rely on the independence assumption\\*.\n",
+    "- <i>Higher</i> accuracy can often be achieved using other machine learning techniques, such as a single-layer [neural network](https://en.wikipedia.org/wiki/Neural_network), which <b><i>does not</i></b> rely on the independence assumption\\*.\n",
     "<div style=\"text-align: right\">*See <a href=\"http://axon.cs.byu.edu/~randy/pubs/wilson.ijcnn2011.beyondprl.pdf\" ><i>Wilson (2011)</i></a></div>"
    ]
   },
@@ -1697,9 +1697,9 @@
    },
    "source": [
     "<b>For example,</b> imagine you got the following output from your classifier.\n",
-    "- Records $A$ and $B$ have a match weight of $42.21$.\n",
-    "- But record $A$ has a weight of $39.01$ with $C$, and records $B$ and $C$ have a weight of $44.98$.\n",
-    "- Assuming that the record pair list is sorted, a greedy assignment algorithm will assign record $A$ to record $B$ (because the weight is larger than for $(A,C)$)\n",
+    "- Records $A$ and $B$ have a <i>match score</i> of $42.21$.\n",
+    "- But record $A$ has a score of $39.01$ with $C$, and records $B$ and $C$ have a score of $44.98$.\n",
+    "- Assuming that the record pair list is sorted, a greedy assignment algorithm will assign record $A$ to record $B$ (because the score is greater than for $(A,C)$)\n",
     "- But, then it can not assign record $C$ to record $B$ (even though it is optimal) because record $B$ has already been assigned to $A$.  \n",
     "\n",
     "| * | A | B | C |\n",
