--- a/prez.ipynb
+++ b/prez.ipynb
@@ -2029,8 +2029,8 @@
    },
    "outputs": [],
    "source": [
-    "# randomly choose a record number\n",
-    "record_num = np.random.randint(0, len(true_links))"
+    "# 'randomly' choose a record number\n",
+    "record_num = 3824"
    ]
   },
   {
